--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,18 @@
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve`. If you change this file, please restart the server process.
+# `jekyll serve -l -H localhost`. If you change this file, please restart the 
+# server process.
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Amirreza Velae"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Amirreza Velae"
+name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://amirrezavelae.github.io/# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "amirrezavelae/amirrezavelae.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -69,6 +70,7 @@ author:
   wikipedia        : # Username
   xing             : # Username
   youtube          : # Username
+  zhihu            : # URL
 
 
 # Site Settings
