--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Amirreza Velae"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://amirrezavelae.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "amirrezavelae/amirrezavelae.github.io"
 
@@ -23,8 +23,8 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Amirreza"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  pronouns         : # example: "he/him"  
+  bio              : "Student"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
