--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Amirreza"
   pronouns         : # example: "he/him"  
   bio              : "Student"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Tehran"
+  employer         : "Sharif University"
   uri              : # URL
   email            : "none@example.org" 
 
