--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Tehran"
   employer         : "Sharif University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "amirrezavelae@ee.sharif.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -42,8 +42,8 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
-  kaggle           : # Username  
+  github           : "amirrezavelae"
+  kaggle           :  amirrezavelae
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
@@ -64,7 +64,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : "UniofOxford"  # Replace this with your X / Twitter handle
+  twitter          : "hellsiceseller"  # Replace this with your X / Twitter handle
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
@@ -247,7 +247,7 @@ defaults:
       type: publications
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
       comments: true
   # _portfolio
@@ -256,7 +256,7 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
       comment: true
   # _talks
@@ -265,7 +265,7 @@ defaults:
       type: talks
     values:
       layout: talk
-      author_profile: true
+      author_profile: flase
       share: true
 
 
