--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Amirreza Velae"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Amirreza Velae"
 description              : &description "personal description"
 url                      : https://amirrezavelae.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
